tests/NormalTests/paczka1/fuzzy1/45449632.err
Error in line 3: jSWuJR A142 38,0
Error in line 6: jSWuJR A239 167,1
Error in line 8: jSWuJR A142 56,9
Error in line 9: jSWuJR S740 94,9
Error in line 10: jSWuJR A142 64,9
Error in line 13: v0cn S740 52,4
